# accounting-analytics-book

./: .gitignore  01-introduction-to-accounting-analytics.qmd  02-python-quarto-setup.qmd  02-python-quarto-setup.quarto_ipynb_1  02-python-quarto-setup.quarto_ipynb_2  02-python-quarto-setup.quarto_ipynb_3  02-python-quarto-setup.quarto_ipynb_4  03-data-fundamentals.qmd  04-data-wrangling-pandas.qmd  04-data-wrangling-pandas.quarto_ipynb_1  05-exploratory-data-analysis.qmd  06-data-visualization.qmd  07-financial-statement-analysis.qmd  08-audit-analytics.qmd  08-management-accounting-analytics.qmd  09-audit-analytics.qmd  09-fraud-anomaly-detection.qmd  10-fraud-anomaly-detection.qmd  10-revenue-recognition-analysis.qmd  11-revenue-recognition-analysis.qmd  11-tax-analytics.qmd  12-predictive-modeling-intro.qmd  12-tax-analytics.qmd  13-genai-in-accounting.qmd  13-predictive-modeling-intro.qmd  14-automated-reporting-quarto.qmd  14-genai-in-accounting.qmd  15-automated-reporting-quarto.qmd  15-data-ethics-reproducibility.qmd  16-data-ethics-reproducibility.qmd  17-capstone-project.qmd  README.md  _quarto.yml  appendix-a-python-primer.qmd  appendix-b-financial-statement-basics.qmd  appendix-c-edgar-database.qmd  index.qmd  preamble.tex  pyproject.toml  references.bib
_book/: 01-introduction-to-accounting-analytics.html  02-python-quarto-setup.html  03-data-fundamentals.html  04-data-wrangling-pandas.html  05-exploratory-data-analysis.html  06-data-visualization.html  07-financial-statement-analysis.html  08-audit-analytics.html  08-management-accounting-analytics.html  (+23 more)
(+81 files in other folders)
