[project]
name = "ACCOUNTING-ANALYTICS-BOOK"
version = "0.1.0"
requires-python = ">= 3.11.0"
dependencies = [
    "edgar-analytics>=1.0.7",
    "edgartools>=5.42.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotly>=6.9.0",
    "plotnine>=0.15.7",
    "polars>=1.42.1",
    "pyfixest>=0.60.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "tidyfinance>=0.3.0",
]
